[EFL] Ewk_Intent_Request's postResult/postFailure should take serialized script values in argument https://bugs.webkit.org/show_bug.cgi?id=87829

Patch by Christophe Dumez <christophe.dumez@intel.com> on 2012-05-30
Reviewed by Adam Barth.

Source/WebKit/efl:

Ewk_Intent_Request's postResult/postFailure methods now take
SerializedScriptValues in argument instead of strings. The client can
now post results of any type, not just strings, which is according to
spec. Those methods are now moved to private header and a helper
function was added to DumpRenderTreeSupportEfl so that the DRT can
still send intent results.

* WebCoreSupport/DumpRenderTreeSupportEfl.cpp:
(DumpRenderTreeSupportEfl::sendWebIntentResponse):
* WebCoreSupport/DumpRenderTreeSupportEfl.h:
* ewk/ewk_intent_private.h:
(WebCore):
* ewk/ewk_intent_request.cpp:
(ewk_intent_request_result_post):
(ewk_intent_request_failure_post):
* ewk/ewk_intent_request.h:

Tools:

EFL's LayoutTestController now makes uses of the new helper method in
DumpRenderTreeSupportEfl in order to send the intent response. This is
now needed because the Ewk_Intent_Request postResult / postFailure
methods were made private.

* DumpRenderTree/efl/LayoutTestControllerEfl.cpp:
(LayoutTestController::sendWebIntentResponse):

Canonical link: https://commits.webkit.org/105686@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118962 268f45cc-cd09-0410-ab3c-d52691b4dbfc